--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,5 @@
+
+
 <html lang="en">
 
 <head>
@@ -10,6 +12,6 @@
 <body>
     <h1>Welcome!</h1>
     <p>To a very simple static html page for testing Amplify hosting</p>
-</body>
+    <p>Guid: 617b8137-255a-46fb-9c92-6eb53c415d5f</p></body>
 
 </html>
